k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foruscorp
  labels:
    name: foruscorp
    app: foruscorp
